<resources>
    <string name="action_settings">Paramètres</string>
    <string name="price_with_currency">%s €</string>
    <string name="authentication_sign_in_error">Erreur d\'authentification : %d</string>
    <string name="fragment_title_become_washer">Rejoins nous</string>
    <string name="no_data_text">Pas de données actuellement</string>
    <string name="no_feed_text">Pas d\'avis actuellement</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title_activity_maps">Map</string>
    <string name="position_not_ready">Localisation en cours…</string>
    <string name="navigation_drawer_open">Open nav drawer</string>
    <string name="navigation_drawer_close">Close nav drawer</string>
    <string name="rgpd_title">RGPD</string>
    <string name="row_merchant_text_start_price">à partir de</string>
    <string name="designed_by_text">Designed by KiloMobi</string>
    <string name="emoji_water_droplet_text">&#128166;</string>
    <string name="emoji_right_finger_pointing">&#128073;</string>
    <string name="emoji_no_data">&#128064;</string>
    <string name="offer_title">OFFRES</string>
    <string name="feed_title">AVIS</string>
    <string name="contact_title">CONTACT</string>
    <string name="merchant_pro">PRO</string>
    <string name="merchant_part">PARTICULIER</string>
    <string name="distance_part">0,2 km</string>
    <string name="call_to_action_feed">PLUS D\'INFOS</string>
    <string name="call_to_action_phone">APPELER</string>
    <string name="call_to_action_map">Y ALLER</string>
    <string name="phone_text_placeholder">Numéro de téléphone :\n%1$s</string>
    <string name="address_text_placeholder">Adresse :\n%1$s</string>
    <string name="onboarding_title_1">Trouver le lavage idéal</string>
    <string name="onboarding_description_1">Lavage en station, lavage sans eau ou lavage à la main chez un professionnel ? On a les adresses.</string>
    <string name="onboarding_title_2">Faites le vous-même</string>
    <string name="onboarding_description_2">Que ce soit un lavage rapide ou un lavage complet, on vous guide sur chacune des étapes.</string>
    <string name="onboarding_title_3">Rejoigner nous !</string>
    <string name="onboarding_description_3">Proposez ou cherchez un service ? C\'est vous qui voyez.</string>
    <string name="onboarding_button_continue">Suivant</string>
    <string name="onboarding_button_finish">C\'est parti !</string>
    <string name="action_home">Accueil</string>
    <string name="action_map">Carte</string>
    <string name="action_guide_list">Guides</string>
    <string name="action_search">Rechercher</string>
    <string name="action_favorite">Favoris</string>
    <string name="action_add_favorite">Ajouter aux favoris</string>
    <string name="action_add_rating">Ajouter un avis</string>
    <string name="action_add_photo">Ajouter une photo</string>
    <string name="action_delete_favorite">Retirer des favoris</string>
    <string name="action_delete_rating">Supprimer l\'avis</string>
    <string name="action_feed">Avis</string>
    <string name="action_photolab">PhotoLab</string>
    <string name="action_product">Produits</string>
    <string name="action_become_washer">Devenir Washer</string>
    <string name="action_store_washer">Mon Wash</string>
    <string name="action_connect">Se connecter</string>
    <string name="action_disconnect">Se déconnecter</string>
    <string name="action_tos">A propos</string>
    <string name="action_geolocalisation">Centrer</string>
    <string name="become_washer_title">Félicitation ! Tu es à 5 minutes de devenir un Washer</string>
    <string name="become_washer_text">Il suffit de répondre à quelques questions &#128513;</string>
    <string name="add_rating_header">%1$s une évaluation pour %2$s</string>
    <string name="add_rating_action">Ajouter</string>
    <string name="modify_rating_action">Modifier</string>
    <string name="action_rating_stars">Notation :</string>
    <string name="snack_syncing_message">Les évaluations sont en cours de synchronisation, réessayer plus tard.</string>
    <string name="input_rating_manage_success">Votre évaluation vient d\'être %1$s</string>
    <string name="add_rating_action_publish">publiée</string>
    <string name="modify_rating_action_publish">modifiée</string>
    <string name="delete_rating_action_publish">supprimée</string>
    <string name="delete_rating_title">Suppression</string>
    <string name="delete_rating_text">Voulez-vous supprimer l\'évaluation ?</string>
    <string name="add_rating_text">Détail de l\'évaluation</string>
    <string name="become_washer_name">Nom affiché</string>
    <string name="become_washer_description">Description</string>
    <string name="become_washer_phone">Numéro de téléphone</string>
    <string name="become_washer_address">Adresse</string>
    <string name="become_washer_city">Ville</string>
    <string name="become_washer_zipcode">Code postal</string>
    <string name="become_washer_services">Services proposés :</string>
    <string name="become_washer_work_at_home">Travaille à domicile ?</string>
    <string name="become_washer_siren">Numéro SIREN (pro) ?</string>
    <string name="common_select">Sélectionner</string>
    <string name="common_validate">Valider</string>
    <string name="common_yes">Oui</string>
    <string name="common_no">Non</string>
    <string name="common_image_content_description">Image</string>
    <string name="common_welcome_user">Démo - Bienvenue %s</string>
    <string name="common_auth_failed">Echec de l\'authentification</string>
    <string name="common_disconnect_success">Vous êtes maintenant déconnecté</string>
    <string name="common_user">Utilisateur</string>
    <string name="common_feature_require_authentication">Cette fonctionnalité nécessite d\'être connecté</string>
    <string name="select_picture">Choisissez une photo</string>
    <string name="no_picture_taken">Aucune photo sélectionner</string>
    <string name="picture_upload_success">Envoi avec succès !</string>
    <string name="picture_upload_error">Erreur lors de l\'envoi, veuillez vérifier votre connexion internet</string>
    <string name="add_photo_text">Les photos s\'afficheront sous 48h dans le flux d\'accueil et également dans PhotoLab</string>
    <string name="add_photo_car_text">Envi de rajouter des infos sur le véhicule ?</string>
    <string name="add_photo_product_text">Quel(s) produit(s) utilisé(s) ?</string>
    <string name="chip_db_headlight" translatable="false">headlight</string>
    <string name="chip_db_interior" translatable="false">interior</string>
    <string name="chip_db_exterior" translatable="false">exterior</string>
    <string name="chip_db_windshield" translatable="false">windshield</string>
    <string name="chip_db_electric_plug" translatable="false">ev_plug</string>
    <string name="chip_db_transport" translatable="false">transport</string>
    <string name="chip_db_cb" translatable="false">credit_card</string>
    <string name="chip_db_eco" translatable="false">eco_friendly</string>
    <string name="chip_db_wifi" translatable="false">wifi</string>
    <string name="chip_db_coffee" translatable="false">coffee</string>
    <string name="chip_db_ceramic" translatable="false">ceramic</string>
    <string name="chip_db_hand_wash" translatable="false">hand_wash</string>
    <string name="chip_db_motorbike" translatable="false">bike</string>
    <string name="chip_headlight">Optiques</string>
    <string name="chip_interior">Intérieur</string>
    <string name="chip_exterior">Extérieur</string>
    <string name="chip_windshield">Pare-brise</string>
    <string name="chip_electric_plug">Recharge</string>
    <string name="chip_transport">Transport</string>
    <string name="chip_cb">CB</string>
    <string name="chip_eco">Écologique</string>
    <string name="chip_wifi">WiFi</string>
    <string name="chip_coffee">Café</string>
    <string name="chip_ceramic">Céramique</string>
    <string name="chip_hand_wash">Fait main</string>
    <string name="chip_motorbike">Moto</string>
    <string name="chip_sponsor">Sponsorisée</string>
    <string name="input_error_name">Veuillez insérer un nom pour l\'affichage</string>
    <string name="input_error_generic_length_requirement">Veuillez entrer au moins 10 caractères</string>
    <string name="input_error_name_requirement">Veuillez entrer un nom d\'affichage plus long</string>
    <string name="input_error_description">Veuillez insérer une description</string>
    <string name="input_error_description_requirement">Veuillez entrer au moins 10 mots pour vous présenter</string>
    <string name="input_error_phone">Veuillez insérer votre téléphone</string>
    <string name="input_error_phone_requirement">Veuillez entrer un numéro valide</string>
    <string name="input_error_address">Veuillez insérer votre adresse</string>
    <string name="input_error_address_requirement">Veuillez insérer une adresse valide</string>
    <string name="input_error_zipcode">Veuillez insérer votre code postal</string>
    <string name="input_error_zipcode_requirement">Veuillez insérer un code postal valide</string>
    <string name="input_error_city">Veuillez insérer une ville</string>
    <string name="input_error_city_requirement">Veuillez insérer une ville valide</string>
    <string name="input_error_services">Veuillez sélectionner au moins un service</string>
    <string name="input_error_work_at_home">Veuillez sélectionner si vous travailler à domicile</string>
    <string name="input_error_is_pro">Veuillez sélectionner si vous êtes un professionnel ou non</string>
    <string name="input_error_siren">Veuillez insérer votre numéro SIREN</string>
    <string name="input_error_siren_requirement">Veuillez insérer un SIREN valide</string>
    <string name="input_error_no_service">Veuillez sélectionner un service que vous proposez</string>
    <string name="input_error_no_radio">Veuillez sélectionner une des options : [oui] ou [non]</string>
    <string name="input_error_no_geohash">L\'adresse saisi est invalide</string>
    <string name="input_merchant_create_success">Félicitation, vous êtes maintenant un Washer !</string>
    <string name="input_merchant_create_error">Un problème est survenu, vérifier votre connexion</string>
    <string name="input_merchant_update_success">Mis à jour avec succès</string>
    <string name="input_merchant_delete_success">Suppression avec succès</string>
    <string name="dialog_disconnect_title">Déconnexion</string>
    <string name="dialog_disconnect_text">Êtes-vous sûr(e) de vouloir partir ?</string>
    <string name="error_merchant_marker">Une erreur est survenue, le détail n\'est pas disponible.</string>
    <string name="error_guide_not_found">Une erreur est survenue, le guide n\'est pas disponible.</string>
    <string name="cardview_like">%1d &#128153;</string>
    <string name="cardview_call_to_action">J\'AIME</string>
    <string name="shared_pref_name">washy-prefs</string>
    <string name="shared_pref_like">feed-references-like</string>
    <string name="perm_request_geolocation_title">Géolocalisation</string>
    <string name="perm_request_geolocation_message">Washy nécessite votre position pour vous proposez les lieux de lavage proche.</string>
    <string name="perm_request_geolocation_again">OK</string>
    <string name="perm_request_geolocation_nop">NON</string>
    <string name="perm_no_geolocation_title">Géolocalisation</string>
    <string name="perm_no_geolocation_message">Washy n\'a pas pu obtenir votre position, veuillez vérifier les permissions de l\'application.</string>
    <string name="intent_sharing_title">Partager</string>
    <string name="intent_sharing_text">Cette application pourrait t\'intéresser : \n%s &#128513;</string>
    <string name="intent_sharing_intent_title">Partager ce contenu avec :</string>
    <string name="html_sample"><h2>Title</h2><br /><p>Description here</p></string>
</resources>