<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:showIn="navigation_view">

<!--    <item-->
<!--        android:id="@+id/action_search"-->
<!--        android:orderInCategory="100"-->
<!--        android:icon="@drawable/ic_magnify"-->
<!--        android:title="@string/action_search"-->
<!--        app:showAsAction="never" />-->
    <item
        android:id="@+id/action_home"
        android:orderInCategory="100"
        android:icon="@drawable/ic_home"
        android:title="@string/action_home"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_map"
        android:orderInCategory="100"
        android:icon="@drawable/ic_map"
        android:title="@string/action_map"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_favorite"
        android:orderInCategory="100"
        android:icon="@drawable/ic_heart_outline"
        android:title="@string/action_favorite"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_feed"
        android:orderInCategory="100"
        android:icon="@drawable/ic_comment_quote_outline"
        android:title="@string/action_feed"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_product"
        android:orderInCategory="100"
        android:icon="@drawable/ic_cart_outline"
        android:title="@string/action_product"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_become_washer"
        android:orderInCategory="100"
        android:title="@string/action_become_washer"
        android:icon="@drawable/ic_local_car_wash"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_disconnect"
        android:orderInCategory="100"
        android:title="@string/action_disconnect"
        android:icon="@drawable/ic_logout"
        app:showAsAction="never" />

</menu>
