<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.chip.ChipGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/input_chip_group"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:singleSelection="true"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_headlight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:chipBackgroundColor="@color/white"
        app:chipIconTint="@color/colorGrey500"
        app:chipIcon="@drawable/ic_car_light_dimmed"
        app:chipStrokeColor="@color/colorGrey200"
        app:chipStrokeWidth="1dp"
        app:chipCornerRadius="16dp"
        android:text="@string/chip_headlight"/>

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_interior"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:chipBackgroundColor="@color/white"
        app:chipIconTint="@color/colorGrey500"
        app:chipIcon="@drawable/ic_car_seat"
        app:chipStrokeColor="@color/colorGrey200"
        app:chipStrokeWidth="1dp"
        app:chipCornerRadius="16dp"
        android:text="@string/chip_interior"/>

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_windshield"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:chipBackgroundColor="@color/white"
        app:chipIconTint="@color/colorGrey500"
        app:chipIcon="@drawable/ic_car_windshield_outline"
        app:chipStrokeColor="@color/colorGrey200"
        app:chipStrokeWidth="1dp"
        app:chipCornerRadius="16dp"
        android:text="@string/chip_windshield"/>

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_eco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:chipBackgroundColor="@color/white"
        app:chipIconTint="@color/colorGrey500"
        app:chipIcon="@drawable/ic_leaf"
        app:chipStrokeColor="@color/colorGrey200"
        app:chipStrokeWidth="1dp"
        app:chipCornerRadius="16dp"
        android:text="@string/chip_eco"/>

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:chipBackgroundColor="@color/white"
        app:chipIconTint="@color/colorGrey500"
        app:chipIcon="@drawable/ic_credit_card"
        app:chipStrokeColor="@color/colorGrey200"
        app:chipStrokeWidth="1dp"
        app:chipCornerRadius="16dp"
        android:text="@string/chip_cb"/>

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_coffee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:chipBackgroundColor="@color/white"
        app:chipIconTint="@color/colorGrey500"
        app:chipIcon="@drawable/ic_coffee_outline"
        app:chipStrokeColor="@color/colorGrey200"
        app:chipStrokeWidth="1dp"
        app:chipCornerRadius="16dp"
        android:text="@string/chip_coffee"/>

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_wifi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:chipBackgroundColor="@color/white"
        app:chipIconTint="@color/colorGrey500"
        app:chipIcon="@drawable/ic_wifi"
        app:chipStrokeColor="@color/colorGrey200"
        app:chipStrokeWidth="1dp"
        app:chipCornerRadius="16dp"
        android:text="@string/chip_wifi"/>

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_electric"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:chipBackgroundColor="@color/white"
        app:chipIconTint="@color/colorGrey500"
        app:chipIcon="@drawable/ic_ev_station"
        app:chipStrokeColor="@color/colorGrey200"
        app:chipStrokeWidth="1dp"
        app:chipCornerRadius="16dp"
        android:text="@string/chip_electric_plug"/>

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_transport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:chipBackgroundColor="@color/white"
        app:chipIconTint="@color/colorGrey500"
        app:chipIcon="@drawable/ic_train_car"
        app:chipStrokeColor="@color/colorGrey200"
        app:chipStrokeWidth="1dp"
        app:chipCornerRadius="16dp"
        android:text="@string/chip_transport"/>

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_motorbike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:chipBackgroundColor="@color/white"
        app:chipIconTint="@color/colorGrey500"
        app:chipIcon="@drawable/ic_motorcycle"
        app:chipStrokeColor="@color/colorGrey200"
        app:chipStrokeWidth="1dp"
        app:chipCornerRadius="16dp"
        android:text="@string/chip_motorbike"/>

</com.google.android.material.chip.ChipGroup>